Changelog for GEMC
==================

12/5/16
 - fixed clas12 ctof time offset
 - added Birk Constant properties in material factory

11/29/16
 - tdc was not cast correcly to int in DC hit process

11/23/16
 - all ftof panels assigned to the same hit process and bank

11/22/16
 - added magnetic field information in MHit. This will give access to it to all sensitive detector hit process routines.
 - loading field info in MHit
 - changed DC hit process to have layer from 1-36 and to have TDC = time in ns

11/18/16
 - added option SKIPNGEN to skip N generated events

11/15/16
 - added CLAS12 CND, FMT, BST, HTCC, LTCC, RICH, FTCAL, FTHODO constants and database reading

11/7/16
 - new bonus hit process

10/25/16
 - evio format for RF signal conforming to CLAS12 structure.

10/18/16
 - matching bst hit process pars to java geometry

10/10/16
 - added anti_neutronInelastic to process catalogue.

.. Note::
	10/7/16 gemc 2.5 released.

|

10/7/16
 - added button to display magnetic field lines as arrows
 - added button to display an automatic scale on screen

10/5/16
 - added tdc variable for clas12 dc
 - cad.gxml path is now looked in the cad files directories as well

9/28/16
 - addressing precision issue in bst hit process routine
 - ec process ID is now empty - every strip is now a volume

9/27/16
 - fixed cosmic routine, was not generating cosmics vertices correctly.

9/15/16
 - writeFADCMode7 - not final version yet
 - composite banks interface finalized
 - added template voltage signal for the hit process routines that supports it

9/13/16
 - using DGauss as default for ec hit process routine voltage signal
 - default sampling time: 4 ns. Default number of samples: 250 (1 microsecond total)
 - moving translation tables to hit process constants - out of event/instantiated hit process routine
 - adding crate/slot/channel to vsignal
 - modifying ec process routine accordingly
 - added writeFADCMode1

9/12/16