@@ -94,7 +94,15 @@ map<string, mirror*> text_mirrors::initMirrors(runConditions rc, goptions opts)
 			thisMir->opticalsFromString(             gt.data[11], "specularlobe");
 			thisMir->opticalsFromString(             gt.data[12], "specularspike");
 			thisMir->opticalsFromString(             gt.data[13], "backscatter");
-			
+
+			// this condition is for backward compatibility,
+			// sigma Alpha were added with gemc 2.6
+			// 15 exact quantities
+			if( gt.data.size() > 14) {
+				thisMir->sigmaAlpha = get_number(gt.data[14]);
+			}
+
+
 			mymirs[thisMir->name] = thisMir;
 			
 		}
