@@ -4,6 +4,7 @@ Changelog for GEMC
 12/5/16
  - fixed clas12 ctof time offset
  - added Birk Constant properties in material factory
+ - added reading mirrors Sigma Alpha. Fixed backward compatibility for materials.
 
 11/29/16
  - tdc was not cast correcly to int in DC hit process
